--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0.625rem;
     position: fixed;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
@@ -50,11 +50,11 @@ header nav{
     gap: 2rem;
 }
 
-header nav a{
+header nav a, header nav a:visited{
     color: #000;
     text-align: center;
     font-family: Zain;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 200;
     transition: all 0.3s ease-in-out;
 
@@ -70,27 +70,29 @@ header nav a:hover{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-top: 120px;
+    margin-top: 7.5rem;
     background-image: url('../assets/img/banner.png');
     background-size: cover;
     width: 90%;
     height: 55vh;
     border-radius: 20px;
     color: white;
-    padding: 70px;
+    padding: 4.375rem;
     filter: drop-shadow(0px 4px 9px rgba(0, 0, 0, 0.15)) drop-shadow(0px 17px 17px rgba(0, 0, 0, 0.13)) drop-shadow(0px 37px 22px rgba(0, 0, 0, 0.08)) drop-shadow(0px 66px 27px rgba(0, 0, 0, 0.02)) drop-shadow(0px 104px 29px rgba(0, 0, 0, 0.00));
 }
 
 .banner p{
-    text-align: justify;
+    text-align: left;
     font-family: Zain;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     line-height: 96%; /* 19.2px */
     letter-spacing: 1px;
     display: flex;
-    width: 227px;
-    height: 76px;
+    width: 37.5rem;
+    height: 5.625rem;
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -98,28 +100,40 @@ header nav a:hover{
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    gap: 10px;
+    gap: 1rem;
 }
 
 .titulo h2:first-child {
     text-align: center;
     font-family: Zain;
-    font-size: 64px;
+    font-size: 4rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -3.2px;
-
+    width: 7.5rem;
     background: linear-gradient(276deg, #475356 37.03%, #1E3041 181.78%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
+#projetos div.titulo h2:first-child{
+    width: 11.25rem;
+}
+
+#servicos div.titulo h2:first-child{
+    width: 9.375rem;
+}
+
+#contato div.titulo h2:first-child{
+    width: 12.5rem;
+}
+
 .titulo h2:last-child {
     text-align: center;
     font-family: Charm;
-    font-size: 96px;
+    font-size: 6rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -128,4 +142,483 @@ header nav a:hover{
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+#quem-somos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#quem-somos div.titulo{
+   align-self: flex-start;
+}
+
+#quem-somos article{
+    width: 80%;
+    height: 58vh;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 18px 5px 0px rgba(150, 150, 150, 0.00), 0px 12px 5px 0px rgba(150, 150, 150, 0.01), 0px 6px 4px 0px rgba(150, 150, 150, 0.03), 0px 3px 3px 0px rgba(150, 150, 150, 0.04), 0px 1px 2px 0px rgba(150, 150, 150, 0.05);
+
+    padding: 5vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10vh;
+    background-image: url("../assets/img/logos/logo-solo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+}
+
+#quem-somos article picture{
+    background-image: url("../assets/img/image-1.png");
+    background-size: cover;
+    width: 40vw;
+    height: 36vh;
+    border-radius: 10px;
+    filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.34)) drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.30)) drop-shadow(0px 6px 3px rgba(0, 0, 0, 0.18)) drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.05)) drop-shadow(0px 16px 4px rgba(0, 0, 0, 0.01));
+}
+
+#quem-somos article aside{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+
+}
+
+#quem-somos article p{
+    width: 30vw;
+    text-align: justify;
+    font-family: Zain;
+    font-size: 1.2rem;   
+    font-weight: 300;
+}
+
+#projetos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+#projetos .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 2.5rem;
+    
+
+}
+
+#projetos div:first-child{
+    align-self: flex-end;
+}
+
+#projetos .container div{
+    border-radius: 20px;
+    box-shadow: 0px 18px 5px 0px rgba(150, 150, 150, 0.00), 0px 12px 5px 0px rgba(150, 150, 150, 0.01), 0px 6px 4px 0px rgba(150, 150, 150, 0.03), 0px 3px 3px 0px rgba(150, 150, 150, 0.04), 0px 1px 2px 0px rgba(150, 150, 150, 0.05);
+}
+
+.img-1{
+    grid-area: img1;
+    grid-column: 1;
+    grid-row: 1/3;
+    width: 30vh;
+    height: 30vh;
+    background-image: url("../assets/img/grid-1.png");
+    background-position: center;
+    background-size: cover;
+   
+}
+
+.img-2{
+    grid-area: img2;
+    grid-column: 2;
+    grid-row: 1;
+    background-image: url("../assets/img/grid-2.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.img-3{
+    grid-area: img3;
+    grid-column: 3;
+    grid-row: 1/3;
+    background-image: url("../assets/img/grid-3.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.img-4{
+    grid-area: img4;
+    grid-column: 4;
+    grid-row: 2;
+    background-image: url("../assets/img/grid-4.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.img-5{
+    grid-area: img5;
+    grid-column: 2;
+    grid-row: 2/4;
+    background-image: url("../assets/img/grid-5.png");
+    background-position:right;
+    background-size: cover;
+}
+
+.img-6{
+    grid-area: img6;
+    grid-column: 3/5;
+    grid-row: 3;
+    background-image: url("../assets/img/grid-6.png");
+    background-position: bottom;
+    background-size: cover;
+}
+
+a button{
+    width: 15vw;
+    height: 7vh;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(181deg, #475356 -17.57%, #1E3041 136.45%);
+    box-shadow: 0px 20px 6px 0px rgba(0, 0, 0, 0.00), 0px 13px 5px 0px rgba(0, 0, 0, 0.01), 0px 7px 4px 0px rgba(0, 0, 0, 0.05), 0px 3px 3px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.10);
+    color: #FFF;
+    text-shadow: 0px 14px 4px rgba(0, 0, 0, 0.00), 0px 9px 4px rgba(0, 0, 0, 0.02), 0px 5px 3px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.13), 0px 1px 1px rgba(0, 0, 0, 0.15);
+    font-family: Zain;
+    font-size: 1.5rem;
+    font-weight: 400;
+    letter-spacing: -1.08px;
+    transition: all;
+    transition-duration: 350ms;
+    transition-delay: 150ms;
+    cursor: pointer;
+}
+
+a button:hover{
+    scale: 110%;
+    background: linear-gradient(181deg, #526263 -17.57%, #295644 136.45%);
+}
+
+#servicos div.titulo{
+    align-self: flex-start;
+}
+
+#servicos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.875rem;
+
+}
+
+#servicos .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+.servico{
+    background-color: gray;
+    width: 60vw;
+    height: 12vh;
+    border-radius: 20px;
+    color: #FFF;
+    font-family: Zain;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    padding: 1.5rem;
+    transition: all;
+    transition-duration: 350ms;
+    transition-delay: 150ms;
+    background-attachment: fixed;
+    font-weight: 400;
+}
+
+.servico:hover{
+    height: 25vh;
+    font-size: 2.5rem;
+
+}
+
+.servico.a{
+    justify-content: flex-end;
+}
+
+.servico.b{
+    justify-content: flex-start;
+}
+
+.servico.s1{
+    background-image: url("../assets/img/serv-1.png");
+    background-position: center;
+} 
+
+.servico.s2{
+    background-image: url("../assets/img/serv-2.png");
+    background-position: center;
+} 
+
+.servico.s3{
+    background-image: url("../assets/img/serv-3.png");
+    background-position: center;
+    background-size: cover;
+} 
+
+.servico.s4{
+    background-image: url("../assets/img/serv-4.png");
+    background-position: center;
+    background-size: cover;
+  
+} 
+.servico.s5{
+    background-image: url("../assets/img/serv-5.png");
+    background-position: bottom;
+    background-size: cover;
+  
+} 
+
+#depoimentos div.titulo{
+    align-self: flex-end;
+}
+
+#depoimentos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3.75rem;
+}
+
+#depoimentos .container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1.875rem;
+}
+
+#depoimentos .container .card{
+    background-color: red;
+    width: 30vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 1rem;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 109px 30px 0px rgba(0, 0, 0, 0.00), 0px 70px 28px 0px rgba(0, 0, 0, 0.01), 0px 39px 23px 0px rgba(0, 0, 0, 0.05), 0px 17px 17px 0px rgba(0, 0, 0, 0.09), 0px 4px 10px 0px rgba(0, 0, 0, 0.10);
+    background-image: url("../assets/img/logos/logo-solo.svg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#depoimentos .container .card .icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+#depoimentos .container h3{
+    color: #475356;
+    font-family: Charm;
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#depoimentos .container p{
+    color: #475356;
+    font-family: Zain;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#contato{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5vh;
+}
+
+#contato div.titulo{
+    align-self: flex-start;
+}
+
+#contato .container{
+    background-color: red;
+    width: 50vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-image: url("../assets/img/logos/logo-solo.svg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    background-color: #FFF;
+    box-shadow: 0px 80px 23px 0px rgba(0, 0, 0, 0.00), 0px 51px 21px 0px rgba(0, 0, 0, 0.01), 0px 29px 17px 0px rgba(0, 0, 0, 0.05), 0px 13px 13px 0px rgba(0, 0, 0, 0.09), 0px 3px 7px 0px rgba(0, 0, 0, 0.10);
+    color: #475356;
+    text-align: center;
+    font-family: Zain;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -2.4px;
+}
+
+#contato .container aside:first-child figure{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    transition: all;
+    transition-duration: 350ms;
+    transition-delay: 150ms;
+
+}
+
+#contato .container aside:first-child figure:hover, #contato .container aside:last-child:hover{
+    scale: 110%;
+    cursor: pointer;
+    color: #644966;
+}
+
+#contato a{
+    color: #475356;
+}
+
+#contato a:visited{
+    color: #475356;
+}
+
+#contato .container aside:last-child{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    transition: all;
+    transition-duration: 350ms;
+    transition-delay: 150ms;
+}
+
+#contato .container aside:last-child p{
+    width: 10vw;
+    text-align: right;
+}
+
+footer{
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    width: 95vw;
+    height: 70vh;
+    margin-bottom: 1rem;
+}
+
+footer div > img{
+    position: absolute;
+    align-self: center;
+
+}
+
+footer > div{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #193533 0%, #060212 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 20px;
+}
+
+footer > div .imagem-fundo{
+    width: 100%;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+footer > div .imagem-fundo img{
+    margin-top: 15rem;
+}
+
+footer div.cima{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+footer .cima aside:first-of-type{
+    width: 20vw;
+    color: #FFF;
+    font-family: Zain;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+footer .cima aside:last-of-type{
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    color: #FFF;
+    font-family: Zain;
+    font-size: 1.25rem;
+    font-style: normal;
+    line-height: normal;
+}
+
+footer a, a:visited{
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 300;
+    transition: all;
+    transition-duration: 350ms;
+    transition-delay: 150ms;
+}
+
+footer a:hover{
+    scale: 110%;
+}
+
+footer .baixo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    color: #B1B1B1;
+    font-family: Zain;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+footer .baixo div:first-of-type{
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+footer .baixo div:last-child{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
 }
