--- a/css/projetos.css
+++ b/css/projetos.css
@@ -201,6 +201,10 @@ section div.titulo h2:last-child {
   gap: 1.5rem;
   border-radius: 10px;
   background: #FFF;
+  background-image: url("../assets/img/logos/logo-solo.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   box-shadow: 0px 26px 7px 0px rgba(0, 0, 0, 0.00), 0px 17px 7px 0px rgba(0, 0, 0, 0.01), 0px 9px 6px 0px rgba(0, 0, 0, 0.05), 0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.10);
 }
 
@@ -228,8 +232,8 @@ section div.titulo h2:last-child {
 }
 
 .projeto aside:first-child figure div{
-  width: 30vw;
-  height: 60vh;
+  width: 25vw;
+  height: 55vh;
   border-radius: 20px;
   background-color: gray;
 }
